# hack-2025

./: .gitignore  CLI_USAGE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SOLID_GOD_FUNCTIONS.md  COVERAGE_93_PERCENT_SUMMARY.md  GETTING_STARTED.md  LINTING_COMPLETE.md  QUICKSTART.txt  README.md  REFACTORING_COMPLETE.md  SEMANTIC_PARSING.md  coverage.xml  demo_dependency_analysis.py  demo_output_formats.py  example.py  nl2sql.py  pyproject.toml  requirements.txt  show_all_examples.py  show_all_json.py  test_cli.sh  test_output_formats.py  verify_dependency_parsing.py  verify_setup.py
nl_to_sql/: __init__.py  constants.py  dependency_utils.py  entity_recognizer.py  intent_classifier.py  interfaces.py  models.py  parser.py  query_builder.py  schema.py  sql_formatters.py  translator.py  value_extractors.py
tests/: __init__.py  test_comprehensive_queries.py  test_coverage_boost.py  test_examples.py  test_translator.py  test_translator_complete.py  test_translator_extended.py
